--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,15 @@
 version: '3'
 
 services:
+  db:
+    build: ./mysql
+    environment:
+      MYSQL_DATABASE: hero_development
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./mysql/mysql_data:/var/lib/mysql
+    ports:
+      - '5306:3306'
   nuxt:
     build: ./nuxt
     container_name: 'hero_nuxt'
